assets/css/style.css
/* Fonts  */
@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400&display=swap");

/* Utilies Style  */
body {
  margin: 0;
  padding: 0;
  font-family: "Montserrat", sans-serif;
}

.container {
  max-width: 1200px;
  margin: 0 auto;
  margin-bottom: 50px;
}

/* Navbar */

.navbar {
  display: grid;
  grid-template-columns: 1fr 4fr;
  position: absolute;
  top: 0;
}

.logo img {
  width: 250px;
  height: 90px;
  margin-right: 500px;
}

.menu {
  position: relative;
  list-style: none;
  display: flex;
}

.menu li {
  margin: 0 5px;
}

.menu li a {
  display: inline-block;
  text-decoration: none;
  padding: 12px 12px;
  font-weight: bold;
  letter-spacing: 0.5px;
  color: Black;
  transition: 0.3s all;
}

.menu li.active a {
  color: tomato;
}

.menu li:hover a {
  color: tomato;
  transform: translateY(-2px);
}

/* Hero Section  */
.hero {
  margin-top: 100px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.hLeft {
  padding-right: 200px;
}

.hLeft h1 {
  font-size: 60px;
  line-height: 70px;
  margin-bottom: 10px;
}

.hLeft>h1>span {
  color: tomato;
}

.hLeft p {
  line-height: 20px;
  margin-bottom: 40px;
}

.hLeft a {
  text-decoration: none;
  padding: 10px 30px;
  color: white;
  border-radius: 50px;
  background-color: tomato;
  transition: 0.3s;
}

.hLeft a:hover {
  box-shadow: 5px 5px 10px tomato;
}

.hRight {
  width: 100%;
}

/* Logo Showcase  */
hr.solid {
  border-top: 2px solid #bbb;
  width: 70%;
}

.logo-show {
  display: grid;
  grid-template-columns: repeat(7, 1fr);
  grid-column-gap: 20px;
  padding: 30px 50px;
}

.logo-show img:hover {
  transform: scale(1.2);
}

.logo-show img {
  transition: 0.3s;
}

/* Production SHowcase */
.secTitle h1 {
  text-align: center;
  font-size: 35px;
  padding-bottom: 30px;
}

.secTitle h1>span {
  color: tomato;
}

.collection {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: 20px;
  padding: 20px 60px;
}

.product {
  padding: 10px 15px;
  transition: 0.5s;
  border-radius: 10px;
  box-shadow: 0px 0px 18px #0000003b;
}

.product .product-image img {
  width: 100%;
}

.product:hover {
  box-shadow: rgba(255, 99, 71, 0.5) 0px 5px 15px;
}

.fa-star {
  color: rgba(128, 128, 128, 0.7);
}

.filled {
  color: tomato;
}

.shop-button a {
  float: right;
  margin-top: 20px;
  margin-right: 70px;
  font-weight: bold;
  color: tomato;
  text-decoration: none;
  transition: 0.5s;
}

.shop-button a:hover {
  transform: scale(1.1);
}

/* Serivce Area  */
.support {
  margin: 25px 0 0;
  box-shadow: 0px 0px 18px #0000003b;
}

.services {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: 5px;
  /* justify-content: center;
  align-items: center; */
}

.service {
  padding: 10px 15px;
  box-shadow: 0px 0px 5px #0000003b;
  /* border: 1px solid lightblue; */
  border-radius: 5px;
  text-align: center;
}

.sIcon {
  font-size: 50px;
  color: tomato;

}

/* footer  */
footer {
  background-color: #0a0826;
  text-align: center;
  color: white;
  padding: 30px 0px;
}

.footer-details>h2>span {
  color: tomato;
}

.social-icon i {
  font-size: 25px;
  padding: 0 10px;
  transition: 0.5s;
  color: whitesmoke;
}

/* Mobile Resposive  */

@media screen and (max-width: 668px) {
  .container {
    width: 100%;
    margin: 0 auto;
  }

  .logo img {
    width: 250px;
    height: 90px;
    margin-right: 0px;
  }

  .menus {
    display: none;
  }

  .hero {
    flex-direction: column;
    padding: 0px 50px;
  }

  .hLeft {
    padding-right: 0px;
  }

  .hRight img {
    width: 100%;
  }

  .hRight {
    overflow: hidden;
  }

  /* logo mobile  */
  .logo-show {
    grid-template-columns: repeat(2, 1fr);
    grid-row-gap: 50px;
    border: none;
  }

  /* product  */
  .collection {
    grid-template-columns: repeat(1, 1fr);
    grid-gap: 20px;
    padding: 5px 15px;
    margin-bottom: 30px;
  }

  /* shop button  */
  .shop-button a {
    float: none;
    padding: 20px;
  }

  /* serivce area  */
  .services {
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    grid-gap: 2px;
    margin-top: 30px;
    justify-content: stretch;
    align-items: center;
  }
}

/* Responsive Tablet  */
@media screen and (min-width: 761px) and (max-width: 868px) {
  .logo img {
    width: 250px;
    height: 90px;
    margin-right: 0px;
    padding-left: 20px;
  }

  .menus {
    display: none;
  }

  .hRight {
    overflow: hidden;
    margin-left: -100px;
  }

  .hLeft {
    padding-right: 200px;
    padding-left: 20px;
  }

  .logo-show {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    border-image-slice: 120 10;
    grid-row-gap: 30px;
  }

  .collection {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
  }
}

